--- a/2 producer-consumer/pom.xml
+++ b/2 producer-consumer/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.vijeth</groupId>
-    <artifactId>hello-world</artifactId>
+    <artifactId>producer-consumer</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
